💄 fix heading overlap

--- a/style.css
+++ b/style.css
@@ -322,4 +322,8 @@ aside button span {
   .vignette {
     box-shadow: inset 0 0 180px 150px rgba(0, 0, 0, 1);
   }
+
+  h1 span:last-child {
+    margin-top: -0.5rm;
+  }
 }
